src/less/res.less
// 整体宽度
#res-container .col-md-3,#res-container .col-md-9{
    padding-left: 0;
}
#res-container .col-md-9{
    padding-right: 0;
}
/*顶部*/
.res-header {
  height: 55px;
  background: @resNavHeaderBGColor;
  line-height: 55px;
  font-size: @resNavFontSize;
  color: #fff;
  margin-top: 15px;
  z-index: 9999;
}

// 顶部筛选
.select-nav-item{
    float: left;
    margin: 0 5px;
    position: relative;
}

.menu-drop .trigger {
    background: #fff;
    margin-top: 15px;
    padding-left: 6px;
    height: 27px;
    line-height: 27px;
    cursor: pointer;
}

.menu-drop .select-current{
    height: 20px;
    color: #4D4D4D;
    display: inline-block;
}
.menu-drop .trigger i{
    background: @color1;
    font-size: 18px;
    margin: 1px;
    margin-left: 5px;
    padding: 2px 0 2px 5px;
    margin-right: 1px;
    color: #fff;
}
.menu-drop .icon-angle-up{
    display: none;
}
.menu-drop .icon-angle-down:before, .menu-drop .icon-angle-up:before, .menu-drop .icon-remove:before{
    padding-right: 5px; 
}
.menu-drop .icon-remove:hover{
    color: #DF3D6D;
}
.menu-drop .menu-drop-main{
    position: absolute;
    background: #fff;
    border: 1px solid @color2;
    border-top: none;
    left:-1px;
    width: 200px;
    z-index: 10000;
    display: none;
}
.menu-drop-main .selected{
    color: #12879A;
}
.menu-drop-main .menu-drop-list{
    padding: 0;
    color: #4d4d4d;
}
.menu-drop-main .menu-drop-list>li{
    float: left;
    padding:8px;
    line-height: 20px;
    cursor: pointer;
}
.menu-drop:hover .icon-angle-down{
    display: none;
}
.menu-drop:hover .menu-drop-main{
    display: block;
}
.menu-drop:hover .icon-angle-up{
    display: inline;
}
.seperate-right{
    float: left;
    margin-top: 5px;
}
.menu-drop-list>li:hover{
    color:#0094CE;
}

.res-header .left-tips {
  padding-left: 30px;
  float: left;
}


.res-header img {
  position: relative;
  top: 3px;
}


.res-header select {
  color: @color11;
  width: 66px;
  height: 27px;
  font-size: 15px;
}
.res-header .icon-angle-right{
    color: #fff;
    font-size: 32px;
    padding:5px;
    
}
.res-filter {
  float: right;
}
.res-header .right-label {
  border-bottom: 1px solid #fff;
  padding: 0;
  margin-right:30px;
  cursor: pointer;
  display: inline-block;
  height: 40px;
}
.res-search {
  height: 30px;
  width: 300px;
  line-height: 30px;
  border: none;
  color:#333;
  padding-left: 5px;
  margin-right: 8px;
}
.res-search-btn {
  width: 32px;
  height: 28px;
  background: #0094ce;
  display: inline-block;
  position: relative;
  top: 7px;
  cursor: pointer;
  right: 10px;
}
.res-header .icon-search{
    position: absolute;
    color: #fff;
    font-size: 16px;
    top: 6px;
    left: 8px;
}
.select-tips {
  font-size: 20px;
  background: #fff;
  font-size: 18px;
  border: 1px solid #b5b5b5;
  display: inline-block;
  width: 66px;
  height: 27px;
  line-height: 27px;
  text-indent: 5px;
}
.res-navbody {
  display: block;
  background: #E4F3F7;
  clear: both;
}
.res-navbody .res-body-content {
  border-bottom: 1px dashed @fff;
  line-height: 30px;
  color: @color1;
  font-size: 16px;
  position: relative;
}
.res-navbody .res-body-content{
    border-top: 1px dashed @fff;
    border-bottom: none;
}
.res-navbody .res-content-left{
    margin-right: 10px;
    padding-left: 20px;
    float: left;
}
.res-navbody .select-item{
    text-align: center;
    padding: 0px 7px;
    margin: 3px 3px;
    cursor: pointer;
    white-space:normal;
    float: left;
}
.res-navbody .select-item:hover {
  color: #FFF;
  background: @color8;
}
.res-navbody .selected {
  color: #FFF;
  background: @color8;
}
.res-navbody .res-subject-wrapper{
    width: 90%;
    float: left;
     z-index: 999;
}
.res-navbody .res-more {
  cursor: pointer;
  position: absolute;
  top:0;
  right: 30px;
}
.res-version-wrapper{
   float: left; 
   width: 82%;
}
.res-material-wrapper{
   float: left; 
   width: 72%;
}
.res-navbody .res-material-version{
    clear: both;
    z-index: 8;
}
.res-navbody .res-content-footer{
    position: relative;
    z-index: 0;
}
.res-navbody .res-content-footer img{
    position: absolute;
    right: 5px;
    top:-80px;
}
.res-navbody .res-content-footer div{
    height: 6px;
    background: #B0D042;
}

/*右侧*/
#res-content-right{
    background: #fff;
    padding-top: 30px;
}
.res-content-header{
    height: 30px;
    margin-top: 30px;
    background: url('assets/img/content-bg-header.png') repeat-x;
}

.res-header-catogry{
    background: #DDD;
    color: #5d5d5d;
    font-size: 17px;
    line-height: 40px;
    
}
.res-header-catogry .catogry-item{
    padding: 8.5px 1%;
    cursor: pointer;
}
.res-header-catogry .catogry-item:first-child{
    margin-left: 20px;
}
//.catogry-item:before{
//  content: url('assets/img/lib_before.png');
//}
//.catogry-item:after{
//  content: url('assets/img/lib_after.png');
//}
.res-header-catogry .catogry-item:hover, .catogry-item-active{
    background: @color5;
    color: #fff;
}
.res-header-catogry span, .res-header-type span, .res-header-catogry span {
    line-height: 30px;
}
.catalog-tip{
    position: relative;
}
.catalog-text{
    position: absolute;
    left: 80px;
    top: 50px;
    color: #fff;
    font-size: 24px;
}

.res-header-type{
    margin: 15px 20px;
    font-size: 16px;
    color: #808080;
    
}
.res-header-type .type-title{
    font-weight: bold;
}
.type-active{
    background: @color5;
    color:#fff;
}
.res-header-type .type-list:hover{
    background: @color5;
    color: #fff;
}
.res-header-type .type-list{
    padding: 3px 6px;
    cursor: pointer;
}

.statistic-tab{
    font-size: 15px;
    color:#9D9D9E;
    margin: 5px 25px;
    float: right;
    height: 30px;
}
.statistic-item{
    margin: 5px;
    font-size: 15px;
    color:#9D9D9E;
    cursor: pointer;
}
.statistic-item:hover{
    color:#1589BE;
}
.statistic-tab .active{
    color:#1589BE;
}
// 资源列表
.res-list-main{
  margin-top: 60px;
  margin-right: 15px;
  padding-bottom: 10px;
  margin-bottom: 20px;
  min-height: 400px;
}
/* ... */

